# lex

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BLUEPRINT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COUNTRY_ADAPTER.md  DATA_MODEL.md  NOTICE  README.md  ROADMAP.md  SOURCES.md  agent.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  new-country.yml
.github/workflows/: ci.yml
countries/lu/: CASEMATES.md  README.md  STAGE_1B_SELECTION.md  STAGE_2.md  adapter.py  source.yml
countries/lu/batches/: 00-inventory-notes.md  04-codes.txt  05-state-admin.txt  06-civil-family.txt  07-labor-social.txt  08-commercial-finance.txt  09-tax-finance.txt  10-health-welfare.txt  11-environment-energy.txt  12-education-culture.txt  13-transport.txt  14-security-data.txt  15-tail.txt  README.md  catalog.jsonl
countries/lu/fixtures/: broken-loi-2000-body.md  complex-source.xml  discovery.json  expected-complex.md  expected-ordinary-html.md  expected-ordinary.md  fidelity-lists-source.xml  (+5 more)
docs/adr/: README.md
schemas/: law-frontmatter.schema.json
scripts/: build_lu_inventory.py  check_internal_links.py  renormalize_lu_offline.py  repo_size_report.py
src/lex/: adapters.py  cli.py  dataset.py  errors.py  evidence.py  fidelity.py  frontmatter.py  http.py  markdown.py  runner.py  validate.py
tests/: test_agent_retrieval.py  test_cli.py  test_dataset.py  test_diag_loi2015_tags.py  test_diag_remaining.py  test_fidelity_check.py  test_frontmatter.py  test_id_list.py  test_lu_inventory.py  test_markdown.py  test_validate.py
(+2408 files in other folders)
