[project]
name = "clarvia-lex"
version = "0.1.0"
description = "Current national legislation in one predictable format for AI agents."
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.28,<1",
    "jsonschema>=4.23,<5",
    "lxml>=5.3,<6",
    "PyYAML>=6.0,<7",
]

[project.scripts]
lex = "lex.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.9,<1",
    "types-lxml>=2024.12.0",
    "types-PyYAML>=6.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lex"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests", "countries"]
